k8s/network-policies/prometheus-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - port: 9090
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: telealert-api
      ports:
        - port: 5000
    - ports:
        - port: 53
